align by left and amount record fix

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body{
 
 }
 #organization{
-    text-align: center;
+    text-align: left;
     vertical-align: middle;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     border-radius:  5px ;
